# i18n

./: README.md
i18n_linux/: CMakeLists.txt  rena_i18n.c  rena_i18n.h  rena_i18n.xlsx
i18n_linux/src/: main.cpp  rena_i18n_trans.cpp  rena_i18n_trans.h
rena_i18n_code/: Makefile  Makefile.Debug  Makefile.Release  rena_i18n.xlsx
rena_i18n_code/debug/: moc_mainwindow.cpp  moc_xlsxdocument.cpp
rena_i18n_code/i18n/: i18n.pro  main.cpp  xlsx_to_i18n.cpp  xlsx_to_i18n.h
rena_i18n_code/release/: Makefile  Makefile.Debug  Makefile.Release  object_script.i18n.Release  rena_i18n.c  rena_i18n.h  rena_i18n.xlsx
rena_i18n_code/release/release/: Makefile  Makefile.Debug  Makefile.Release  object_script.i18n.Debug
rena_i18n_code/release/release/release/: moc_mainwindow.cpp  moc_xlsxdocument.cpp
rena_i18n_tool/: rena_i18n.xlsx  使用文档.txt
